--- a/.github/workflows/promote-version.yml
+++ b/.github/workflows/promote-version.yml
@@ -5,7 +5,7 @@ on:
     - 'version.properties'
 
 jobs:
-  release-build:
+  promote-release-version:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -13,19 +13,19 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v2
         with:
-            python-version: 3.x
+          python-version: 3.x
       - name: Set Release Version
-        run: echo "VERSION=" + `./bin/buildinfo.py long` >> $GITHUB_ENV
-      - name: Set Release Version
-        run: echo "${{ env.VERSION }}"
-      # - name: Create Release Tag
-      #   uses: actions/github-script@v5
-      #   with:
-      #     github-token: ${{ github.token }}
-      #     script: |
-      #       github.git.createRef({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         ref: "refs/tags/v${{env.VERSION}}",
-      #         sha: context.sha
-      #       })
+        run: echo "VERSION=`./bin/buildinfo.py long`" >> $GITHUB_ENV
+      - name: Print Release Version
+        run: echo "Setting release version ${{ env.VERSION }}"
+      - name: Create Release Tag
+        uses: actions/github-script@v3
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            github.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/v${{env.VERSION}}",
+              sha: context.sha
+            })
