Add artifacts to PR

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,12 +114,6 @@ jobs:
         echo "Simulator started, launching python test..."
         python3 -c 'from meshtastic.test import testSimulator; testSimulator()'
 
-    # - name: Build for tbeam
-    #   run: platformio run -e tbeam
-    # - name: Build for heltec
-    #   run: platformio run -e heltec
-    # - name: Build for wisblock RAK4631
-    #   run: platformio run -e rak4631
 
     - name: Build everything
       run: bin/build-all.sh
@@ -129,11 +123,18 @@ jobs:
       with:
         name: built
         path: release/archive/firmware-*.zip
-        retention-days: 30
-
+        retention-days: 90
     - name: Store debugging elf files as an artifact
       uses: actions/upload-artifact@v2
       with:
         name: debug-elfs
         path: release/archive/elfs-*.zip
         retention-days: 7
+    - name: Pull request artifacts
+      if: ${{ github.event_name == 'pull_request' }}
+      uses: gavv/pull-request-artifacts@v1.0.0
+      with:
+        commit: ${{ github.event.pull_request.head.sha }}
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        artifacts-branch: artifacts
+        artifacts: release/archive/firmware-*.zip
