--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,4 +137,4 @@ jobs:
         commit: ${{ github.event.pull_request.head.sha }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         artifacts-branch: artifacts
-        artifacts: release/archive/firmware-*.zip
+        artifacts: built.zip
