--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,6 @@ jobs:
       with:
         python-version: 3.x
 
-    - name: Get release version string
-      run: echo "::set-output name=version::$(./bin/buildinfo.py long)"
-      id: version
-
     - name: Cache python libs
       uses: actions/cache@v1
       id: cache-pip # needed in if test
@@ -121,6 +117,10 @@ jobs:
     - name: Build everything
       run: bin/build-all.sh
 
+    - name: Get release version string
+      run: echo "::set-output name=version::$(./bin/buildinfo.py long)"
+      id: version
+
     - name: Store binaries as an artifact
       uses: actions/upload-artifact@v2
       with:
@@ -139,5 +139,5 @@ jobs:
       with:
         commit: ${{ github.event.pull_request.head.sha }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        artifacts-branch: artifacts
+        artifacts-branch: pr-artifacts
         artifacts: firmware.zip
