--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     paths-ignore:
       - '**.md'
       - '**.yml'
-  pull_request:
+  pull_request_target:
     branches: [ master ]
     paths-ignore:
       - '**.md'
