--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -142,9 +142,9 @@ jobs:
         path: ./
 
     - name: Pull request artifacts
-      if: ${{ github.event_name == 'pull_request' }}
+      if: ${{ github.event_name == 'pull_request_target' || github.event_name == 'pull_request' }}
       uses: gavv/pull-request-artifacts@v1.0.0
       with:
-        commit: ${{ github.event.pull_request.head.sha }}
+        commit: ${{ (github.event.pull_request_target || github.event.pull_request).head.sha }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         artifacts: ./firmware-${{ steps.version.outputs.version }}.zip
