--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,5 +147,5 @@ jobs:
       with:
         commit: ${{ (github.event.pull_request_target || github.event.pull_request).head.sha }}
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        repo-branch: artifacts
+        artifacts-branch: artifacts
         artifacts: ./firmware-${{ steps.version.outputs.version }}.zip
